@@ -75,7 +75,7 @@ enum ERR_GENERAL {
   ERR_NO_MASTER_CHANNEL      = 0x8000001a,
   ERR_ALREADY_SUBSCRIBED     = 0x8000001b,
   ERR_NOT_SUBSCRIBED         = 0x8000001c,
-  ERR_ENCRYPT_NO_SUPPROT     = 0x8000001d,
+  ERR_ENCRYPT_NO_SUPPORT     = 0x8000001d,
   ERR_ENCRYPT_UNINITIALIZED  = 0x8000001e,
   ERR_ENCRYPT_UNACCEPTABLE   = 0x8000001f,
   ERR_ENCRYPT_INVALID        = 0x80000020,
