@@ -1,6 +1,10 @@
 
 version 0.4.1 (cvs)
-
+	
+	Features
+	- Support sending the LoginCont message in response to a
+	LoginRedirect
+	
 	Buf Fixes
 	- Bug #1168421 crash when opening specific contacts
 	
